# mmr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  LLMVM-PROGRESS.md  README-deprecated.md  README.md  async_cli.py  chain.py  cli.py  docker-compose.yml  docker.sh  info.py  native_install.sh  pyproject.toml  requirements.txt  start.sh  start_mmr.sh  start_trader.sh  strategy_service.py  test_disposable.py  trader_host.py  trader_service.py  tui_cli.py  worker_service.py
.devcontainer/: devcontainer.json
config_defaults/: data_refresh.yaml  logging.yaml  mongodb.conf  no_docker_pycron.yaml  position_sizing.yaml  pycron.yaml  redis.conf  strategy_runtime.yaml  trader.yaml  trading_filters.yaml
configs/: .gitignore  config.ini  jts.ini  lightbus.yaml  logging.yaml  no_docker_pycron.yaml  position_sizing.yaml  pycron.yaml  strategy_runtime.yaml  test_pycron_synchronous.yaml  trader.yaml  trading_filters.yaml
data/: .gitignore  ib_symbols_nyse_nasdaq.csv  sandp1900-2022.csv  universe_asx.csv
deprecated/: ib_listener.py  ibaiorx.py  ibreactivex.py  z_messaging_client.py  z_messaging_server.py
docs/: AUDIT_2026-07.md  AUDIT_ROADMAP.md  DEV_NOTES.md  MANUAL_INSTALL.md  MONITORING.md  OPERATIONAL_STATE.md  block_diagram.drawio  block_diagram_2.drawio
docs/finance_notes/: ACCOUNTING.md  ANALYSIS.md  FINANCE_MATH.md  INDEX.md  MACRO.md  TRADING_SYSTEMS.md  UNSORTED.md  VOCABULARY.md
experimental/: event_test.py  market.py  rxtest.py  test.py
mmr-loop-skill/: SKILL.md
mmr-loop-skill/references/: LOOP_CONFIG.md
mmr-loop-skill/scripts/: loop_engine.py
mmr-skill/: SKILL.md
mmr-skill/references/: DATA.md
mmr-skill/scripts/: mmr_helpers.py
mmr_llm_skill/: SKILL.md
mmr_llm_skill/references/: STRATEGIES.md
mmr_llm_skill/scripts/: mmr_helpers.py
notebooks/: .gitignore  modeling_cash_flows.ipynb
pycron/: pycron.py
scripts/: arctic_rename_symbols.py  atws_app_check.py  bootstrap_universes.py  build_docker.sh  chain.py  code_docker.sh  container_healthcheck.sh  cs.py  docker-entrypoint.sh  eoddata_scraper.py  finviz_scraper.py  ib-gateway-run.sh  ib_gateway_watchdog.sh  ib_instrument_scraper.py  ib_resolve.py  ib_status.py  last_pulse.sh  mmr_docker.sh  monitor_health.sh  monitor_trading.sh  poll_pin.py  polygon_load_csv.py  reporting.py  run_docker.sh  sync_code.sh  test_pycron.py  test_pycron_sync.py  tournament.py  trader_check.py  tws.vmoptions  universes_cli.py  zmq_pub_listener.py
scripts/installation/: .bash_profile  config.ini  config.py  ibc-config-3.13.ini  install_tws.sh  start_trader.sh  tws-install.exp  twsstart.sh
skills/mmr-loop-skill/: SKILL.md
skills/mmr-loop-skill/scripts/: loop_engine.py
skills/mmr-skill/: SKILL.md
skills/news/: SKILL.md
strategies/: ensemble.py  g6_validation.py  gap_reversion.py  global.py  keltner_breakout.py  late_day_momentum.py  ma_crossover.py  mean_reversion.py  momentum.py  opening_drive_fade.py  opening_range_breakout.py  pairs_zscore.py  regime_adaptive.py  rsi_strategy.py  smi_crossover.py  vbt_macd_bb.py  vwap_reclaim.py  vwap_reversion.py
sweeps/: megacaps_365d.yaml  nasdaq_deep.yaml  nasdaq_top20_daytrade.yaml
tests/: async_create_task.py  async_pending_tasks.py  async_stuff.py  click_test.py  conftest.py  messagebus_test.py  rpcclient.py  rpcserver.py  test_advanced_strategies.py  test_aiorx.py  test_aiozmq_simple.py  test_auto_executor.py  test_backtest_highlighting.py  test_backtest_metrics.py  test_backtest_params.py  test_backtest_stats.py  test_backtest_store.py  test_backtest_time_exits.py  test_backtester.py  test_backtester_advanced.py  test_bar_size_filtering.py  test_bars_per_year.py  test_book.py  test_clientserver_rpc.py  test_config.py  test_container.py  test_data_access.py  test_data_download_freshness.py  test_db_backup.py  test_depth.py  test_disposable.py  test_duckdb_store.py  test_event_store.py  test_executioner.py  test_history_split.py  test_ib_history_errors.py  test_ibrx_async.py  test_idea_scanner.py  test_lookahead_check.py  test_massive_history.py  (+44 more)
trader/: __main__.py  config.py  container.py  data_service.py  mmr_cli.py  objects.py  sdk.py  strategy_service.py  trader_service.py
trader/batch/: batch.py  ib_history_batch.py  ib_history_queuer.py  non_fork_worker.py  polygon_batch.py  polygon_queuer.py  queuer.py  worker_service.py
trader/cli/: cli_renderer.py  command_line.py  commands.py  css.css  custom_footer.py  dialog.py  repl_input.py  universes_cli.py
trader/common/: command_line.py  contract_sink.py  data.py  dataclass_cache.py  distributions.py  exceptions.py  helpers.py  listener_helpers.py  logging_helper.py  observers.py  reactive.py  reactivex.py  singleton.py
trader/data/: backtest_store.py  contract_metadata.py  data_access.py  db_backup.py  duckdb_store.py  event_store.py  market_data.py  position_groups.py  proposal_store.py  store.py  universe.py
trader/listeners/: ib_history.py  ib_history_worker.py  ibaiorx.py  ibreactive.py  massive_history.py  massive_reactive.py  polygon_listener.py  polygon_reactive.py  simple_ib_history.py  twelvedata_history.py  twelvedata_reactive.py
trader/messaging/: bus.py  bus_server.py  clientserver.py  data_service_api.py  messaging_server.py  new_bus.py  strategy_service_api.py  trader_service_api.py
trader/portfolio/: life_simulator.py  quantum_harmonic.py  test_simulator.py  vector_life.py
trader/scratch/: ibrx.py
trader/simulation/: backtest_stats.py  backtester.py  historical_simulator.py  lookahead_check.py  slippage.py
trader/strategy/: auto_executor.py  strategy_runtime.py
trader/tools/: chain.py  depth_chart.py  ib_health.py  ib_instrument_scraper.py  ib_resolve.py  idea_scanner.py  trader_check.py  zmq_pub_listener.py
trader/trading/: algo.py  book.py  executioner.py  order_lifecycle.py  order_validator.py  portfolio.py  portfolio_risk.py  position_sizing.py  proposal.py  reconciliation.py  risk_gate.py  strategy.py  trader_cli.py  trading_filter.py  trading_runtime.py
web/: __init__.py  app.py
web/templates/: dashboard.html
(+11 files in other folders)
