[tool.poetry]
name = "mmr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
traitlets = "5.2.0"
aioredis = "1.3.1"
ib-insync = ">=0.9.70"
tabulate = ">=0.8.9"
coloredlogs = ">=15.0.1"
backoff = ">=1.10.0"
PyYAML = ">=5.4.1"
crontab = ">=0.23.0"
psutil = ">=5.7.2"
tornado = ">=6.1"
vectorbt = ">=0.23.3"
durations = ">=0.3.3"
bs4 = ">=0.0.1"
beautifulsoup4 = ">=4.10.0"
alpaca-trade-api = ">=2.1.0"
alpha-vantage = ">=2.3.1"
alphalens = ">=0.4.0"
polygon-api-client = ">=1.0.2"
plotille = ">=3.7.2"
aiohttp = ">=3.8.1"
json5 = ">=0.9.5"
jsonschema = ">=3.2.0"
numba = ">=0.53.1"
numpy = ">=1.18.4"
pandas = ">=1.4.2"
pandas-datareader = ">=0.10.0"
pytz = ">=2022.1"
requests = ">=2.27.1"
scikit-learn = ">=1.1.1"
scipy = ">=1.8.1"
statsmodels = ">=0.13.2"
streamz = ">=0.5.6"
uvloop = ">=0.16.0"
vine = ">=5.0.0"
lxml = ">=4.6.3"
redis = ">=4.3.1"
rq = ">=1.10.1"
exchange-calendars = ">=3.0.2"
ewmh = ">=0.1.6"
nest-asyncio = ">=1.5.5"
expression = ">=1.1.0"
prompt-toolkit = ">=3.0.20"
pyfiglet = ">=0.8.post1"
pypager = ">=3.0.0"
rich = ">=12.4.4"
tabview = ">=1.4.4"
visidata = ">=2.2.1"
finviz = ">=1.4.2"
setproctitle = ">=1.2.1"
click-repl = ">=0.2.0"
click-help-colors = ">=0.9.1"
click-option-group = ">=0.5.3"
configobj = ">=5.0.6"
arctic = {git = "https://github.com/9600dev/arctic.git"}
yfinance = ">=0.1.69"
uniplot = ">=0.5.0"
ipython = "^8.4.0"
types-requests = "^2.27.30"
flake8 = "^4.0.1"
mypy = "^0.960"
click = "^8.1.3"
aiozmq = "^0.9.0"
dill = "^0.3.5"
pyarrow = "^8.0.0"
types-python-dateutil = "^2.8.19"
types-redis = "^4.3.17"
textual = "^0.1.18"
isort = "^5.10.1"
reactivex = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
force_alphabetical_sort = "True"
from_first = "False"
line_length = 110
lines_after_imports = 2
