[project]
name = "mmr"
version = "0.1.0"
description = "Make Me Rich - Algorithmic Trading Platform"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13",
    "backoff>=2.2",
    "beautifulsoup4>=4.14",
    "bs4",
    "click>=8.3",
    "click-help-colors>=0.9",
    "click-option-group>=0.5",
    "click-repl>=0.3",
    "cloup>=3.0",
    "coloredlogs>=15.0",
    "configobj>=5.0",
    "crontab>=1.0",
    "dateparser>=1.3",
    "dill>=0.4",
    "duckdb>=1.4",
    "durations>=0.3",
    "eventkit>=1.0.0",
    "exchange-calendars>=4.13",
    "expression>=5.6",
    "ib_async>=2.1",
    "ipython>=9.10",
    "lxml>=6.0",
    "matplotlib>=3.10",
    "msgpack>=1.1",
    "numpy>=2.4",
    "pandas>=3.0",
    "plotext>=5.3",
    "plotille>=6.0",
    "plotly>=6.5",
    "prompt-toolkit>=3.0",
    "psutil>=7.2",
    "pyarrow>=23.0",
    "python-dateutil>=2.9",
    "pyfiglet>=1.0",
    "pypager>=3.0",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "pyzmq>=27.1",
    "reactivex>=4.1",
    "requests>=2.32",
    "rich>=14.3",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "tabulate>=0.9",
    "textual>=8.0",
    "tornado>=6.5",
    "uniplot>=0.21",
    "vectorbt>=0.28",
    "massive>=2.2.0",
    "twelvedata[pandas]>=1.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "isort>=5.13",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3",
]
streaming = [
    "websocket-client>=1.8",
]

[project.scripts]
trader-service = "trader.trader_service:main"
strategy-service = "trader.strategy_service:main"
data-service = "trader.data_service:main"
mmr = "trader.mmr_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.isort]
multi_line_output = 3
force_alphabetical_sort = true
from_first = false
line_length = 110
lines_after_imports = 2
